## Makefile.am -- Process this file with automake to produce Makefile.in

INCLUDES		= -I$(top_srcdir)/src

noinst_LIBRARIES	= libfileio.a
libfileio_a_SOURCES	= GPlatesReader.cc GPlatesWriter.cc \
				PlatesBoundaryParser.cc PlatesDataTypes.cc PlatesParserUtils.cc \
				PlatesPostParseTranslator.cc PlatesRotationParser.cc \
				XMLParser.cc
#				TranslationInterface.cc NetCDFReader.cc NetCDFWriter.cc
