## Makefile.am -- Process this file with automake to produce Makefile.in

INCLUDES		= -I$(top_srcdir)/src

noinst_LIBRARIES	= libgeo.a
libgeo_a_SOURCES	= DataGroup.cc GeologicalData.cc GridData.cc LineData.cc PointData.cc \
				TimeWindow.cc \
				PointFeature.cc ReconstructedPointFeature.cc \
				PolylineFeature.cc ReconstructedPolylineFeature.cc
