## Makefile.am -- Process this file with automake to produce Makefile.in

EXTRA_DIST		= plates.clr.inc

INCLUDES		= -I$(top_srcdir)/src

noinst_LIBRARIES	= libgui.a
libgui_a_SOURCES	= Globe.cc NurbsRenderer.cc OpaqueSphere.cc \
						PlatesColourTable.cc Quadrics.cc \
						SimpleGlobeOrientation.cc SphericalGrid.cc \
						ViewportZoom.cc Colour.cc
