## Makefile.am -- Process this file with automake to produce Makefile.in

INCLUDES		= -I$(top_srcdir)/src

noinst_LIBRARIES	= libmaths.a
libmaths_a_SOURCES	= FiniteRotation.cc GreatCircle.cc GreatCircleArc.cc GridOnSphere.cc \
				LatLonPointConversions.cc PointLiesOnGreatCircleArc.cc PointOnSphere.cc \
				PolylineOnSphere.cc PolygonOnSphere.cc PolylineIntersections.cc Real.cc \
				Rotation.cc SmallCircle.cc UnitQuaternion3D.cc UnitVector3D.cc Vector3D.cc
